// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrinterList Renders list of Printers in Flatlist  1`] = `
<React.Fragment>
  <React.Fragment />
  <FlatList
    ItemSeparatorComponent={[Function]}
    data={
      [
        {
          "desc": "Default",
          "id": "123000000000",
          "labelsAvailable": [
            "price",
          ],
          "name": "Front desk printer",
          "type": 0,
        },
        {
          "desc": "Default",
          "id": "0",
          "labelsAvailable": [
            "price",
          ],
          "name": "Invalid printer",
          "type": 0,
        },
        {
          "desc": "Default",
          "id": "456000000000",
          "labelsAvailable": [
            "price",
            "location",
            "pallet",
          ],
          "name": "Mobile printer",
          "type": 1,
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
    style={
      {
        "backgroundColor": "#ffffffff",
      }
    }
  />
</React.Fragment>
`;

exports[`PrinterList Renders list of Printers in Flatlist setting location 1`] = `
<React.Fragment>
  <Text
    style={
      {
        "fontSize": 16,
        "margin": 15,
        "textAlign": "center",
      }
    }
  >
    [missing "en.PRINT.PRINTER_LIST_LOCATION" translation]
  </Text>
  <FlatList
    ItemSeparatorComponent={[Function]}
    data={
      [
        {
          "desc": "Default",
          "id": "123000000000",
          "labelsAvailable": [
            "price",
          ],
          "name": "Front desk printer",
          "type": 0,
        },
        {
          "desc": "Default",
          "id": "0",
          "labelsAvailable": [
            "price",
          ],
          "name": "Invalid printer",
          "type": 0,
        },
        {
          "desc": "Default",
          "id": "456000000000",
          "labelsAvailable": [
            "price",
            "location",
            "pallet",
          ],
          "name": "Mobile printer",
          "type": 1,
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
    style={
      {
        "backgroundColor": "#ffffffff",
      }
    }
  />
</React.Fragment>
`;

exports[`PrinterList Renders list of Printers in Flatlist setting pallet 1`] = `
<React.Fragment>
  <Text
    style={
      {
        "fontSize": 16,
        "margin": 15,
        "textAlign": "center",
      }
    }
  >
    [missing "en.PRINT.PRINTER_LIST_PALLET" translation]
  </Text>
  <FlatList
    ItemSeparatorComponent={[Function]}
    data={
      [
        {
          "desc": "Default",
          "id": "123000000000",
          "labelsAvailable": [
            "price",
          ],
          "name": "Front desk printer",
          "type": 0,
        },
        {
          "desc": "Default",
          "id": "0",
          "labelsAvailable": [
            "price",
          ],
          "name": "Invalid printer",
          "type": 0,
        },
        {
          "desc": "Default",
          "id": "456000000000",
          "labelsAvailable": [
            "price",
            "location",
            "pallet",
          ],
          "name": "Mobile printer",
          "type": 1,
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
    style={
      {
        "backgroundColor": "#ffffffff",
      }
    }
  />
</React.Fragment>
`;

exports[`PrinterList Renders list of Printers in Flatlist setting price sign 1`] = `
<React.Fragment>
  <Text
    style={
      {
        "fontSize": 16,
        "margin": 15,
        "textAlign": "center",
      }
    }
  >
    [missing "en.PRINT.PRINTER_LIST_PRICE" translation]
  </Text>
  <FlatList
    ItemSeparatorComponent={[Function]}
    data={
      [
        {
          "desc": "Default",
          "id": "123000000000",
          "labelsAvailable": [
            "price",
          ],
          "name": "Front desk printer",
          "type": 0,
        },
        {
          "desc": "Default",
          "id": "0",
          "labelsAvailable": [
            "price",
          ],
          "name": "Invalid printer",
          "type": 0,
        },
        {
          "desc": "Default",
          "id": "456000000000",
          "labelsAvailable": [
            "price",
            "location",
            "pallet",
          ],
          "name": "Mobile printer",
          "type": 1,
        },
      ]
    }
    keyExtractor={[Function]}
    renderItem={[Function]}
    style={
      {
        "backgroundColor": "#ffffffff",
      }
    }
  />
</React.Fragment>
`;

exports[`PrinterList Renders printer item card that is disabled 1`] = `
<TouchableOpacity
  disabled={true}
  hostRef={null}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-start",
      "marginVertical": 10,
      "opacity": 0.5,
      "paddingHorizontal": 15,
    }
  }
>
  <mockConstructor
    color="#000000"
    name="printer"
    size={20}
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      }
    }
  >
    <Text>
      Invalid printer
    </Text>
  </View>
  <TouchableOpacity
    hitSlop={
      {
        "bottom": 10,
        "left": 15,
        "right": 15,
        "top": 10,
      }
    }
    onPress={[Function]}
    style={
      {
        "paddingLeft": 15,
        "paddingRight": 5,
        "paddingVertical": 10,
      }
    }
  >
    <mockConstructor
      color="#000000"
      name="trash-can"
      size={20}
    />
  </TouchableOpacity>
</TouchableOpacity>
`;

exports[`PrinterList Renders printer item card that is not disabled when location 1`] = `
<TouchableOpacity
  disabled={false}
  hostRef={null}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-start",
      "marginVertical": 10,
      "paddingHorizontal": 15,
    }
  }
>
  <mockConstructor
    color="#000000"
    name="printer"
    size={20}
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      }
    }
  >
    <Text>
      Mobile printer
    </Text>
  </View>
  <TouchableOpacity
    hitSlop={
      {
        "bottom": 10,
        "left": 15,
        "right": 15,
        "top": 10,
      }
    }
    onPress={[Function]}
    style={
      {
        "paddingLeft": 15,
        "paddingRight": 5,
        "paddingVertical": 10,
      }
    }
  >
    <mockConstructor
      color="#000000"
      name="trash-can"
      size={20}
    />
  </TouchableOpacity>
</TouchableOpacity>
`;

exports[`PrinterList Renders printer item card with no delete icon 1`] = `
<TouchableOpacity
  disabled={null}
  hostRef={null}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-start",
      "marginVertical": 10,
      "paddingHorizontal": 15,
    }
  }
>
  <mockConstructor
    color="#000000"
    name="printer"
    size={20}
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      }
    }
  >
    <Text>
      Invalid printer
    </Text>
  </View>
  <TouchableOpacity
    hitSlop={
      {
        "bottom": 10,
        "left": 15,
        "right": 15,
        "top": 10,
      }
    }
    onPress={[Function]}
    style={
      {
        "paddingLeft": 15,
        "paddingRight": 5,
        "paddingVertical": 10,
      }
    }
  >
    <mockConstructor
      color="#000000"
      name="trash-can"
      size={20}
    />
  </TouchableOpacity>
</TouchableOpacity>
`;

exports[`PrinterList Renders the delete icon for PrinterIds not equal to 0 1`] = `
<TouchableOpacity
  disabled={null}
  hostRef={null}
  onPress={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-start",
      "marginVertical": 10,
      "paddingHorizontal": 15,
    }
  }
>
  <mockConstructor
    color="#000000"
    name="printer"
    size={20}
  />
  <View
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 10,
      }
    }
  >
    <Text>
      Front desk printer
    </Text>
  </View>
  <TouchableOpacity
    hitSlop={
      {
        "bottom": 10,
        "left": 15,
        "right": 15,
        "top": 10,
      }
    }
    onPress={[Function]}
    style={
      {
        "paddingLeft": 15,
        "paddingRight": 5,
        "paddingVertical": 10,
      }
    }
  >
    <mockConstructor
      color="#000000"
      name="trash-can"
      size={20}
    />
  </TouchableOpacity>
</TouchableOpacity>
`;
